<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_inputName"
        android:inputType="textCapWords"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin"
        />
    <EditText
        android:id="@+id/inputSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_inputSalario"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tableLabel_1"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/nombre"
                android:text=""
                android:layout_margin="8dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tableLabel_2"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/renta"
                android:text=""
                android:layout_margin="8dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tableLabel_3"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/afp"
                android:text=""
                android:layout_margin="8dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tableLabel_4"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/isss"
                android:text=""
                android:layout_margin="8dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:text="@string/tableLabel_5"
            android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/salarioNeto"
                android:text=""
                android:layout_margin="8dp"/>
        </TableRow>
    </TableLayout>


</LinearLayout>
